# art-design-pro/src/router/modules/chat.ts
@@ -1,0 +1,35 @@
+import { AppRouteRecord } from '@/types/router'
+
+export const chatRoutes: AppRouteRecord = {
+  path: '/chat',
+  name: 'Chat',
+  component: '/index/index',
+  meta: {
+    title: '聊天室',
+    icon: '&#xe63a;',
+    keepAlive: true
+  },
+  children: [
+    {
+      path: 'room',
+      name: 'ChatRoom',
+      component: '/chat/room',
+      meta: {
+        title: '聊天室列表',
+        keepAlive: true
+      }
+    },
+    {
+      path: 'room/:id',
+      name: 'ChatRoomDetail',
+      component: '/chat/room-detail',
+      meta: {
+        title: '聊天室',
+        keepAlive: false,
+        hideInMenu: true
+      }
+    }
+  ]
+}
+
+export default chatRoutes
